--- a/analyse/package.json
+++ b/analyse/package.json
@@ -50,6 +50,7 @@
   "homepage": "https://github.com/NilsBaumgartner1994/data-clumps",
   "devDependencies": {
     "@types/jest": "^27.0.3",
+    "@types/levenshtein": "^1.0.4",
     "@types/node": "^16.0.0",
     "gts": "^3.1.0",
     "jest": "^27.0.6",
@@ -62,14 +63,15 @@
   "dependencies": {
     "@babel/preset-typescript": "^7.21.0",
     "@stdlib/buffer-from-string": "^0.0.8",
-    "Base64": "^1.1.0",
     "axios": "^0.21.4",
+    "Base64": "^1.1.0",
     "base64-js": "^1.5.1",
     "buffer": "^6.0.0",
     "buffer-from": "^1.1.2",
     "commander": "^10.0.1",
     "data-clumps-type-context": "^0.1.102",
     "eslint": "^7.32.0",
+    "levenshtein": "^1.0.5",
     "simple-git": "^3.19.0",
     "xml2js": "^0.6.2"
   }
