--- a/analyse/package.json
+++ b/analyse/package.json
@@ -73,6 +73,9 @@
     "eslint": "^7.32.0",
     "levenshtein": "^1.0.5",
     "simple-git": "^3.19.0",
+    "stream-chain": "^3.4.0",
+    "stream-json": "^1.9.1",
+    "util": "^0.12.5",
     "xml2js": "^0.6.2"
   }
 }
