--- a/analyse/package.json
+++ b/analyse/package.json
@@ -61,6 +61,7 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "@azure/dtdl-parser": "^1.0.0-beta.2",
     "@babel/preset-typescript": "^7.21.0",
     "@stdlib/buffer-from-string": "^0.0.8",
     "axios": "^0.21.4",
