--- a/analyse/package.json
+++ b/analyse/package.json
@@ -73,6 +73,7 @@
     "data-clumps-type-context": "^0.1.102",
     "eslint": "^7.32.0",
     "levenshtein": "^1.0.5",
+    "p-limit": "^3.1.0",
     "simple-git": "^3.19.0",
     "stream-chain": "^3.4.0",
     "stream-json": "^1.9.1",
