--- a/analyse/package.json
+++ b/analyse/package.json
@@ -63,6 +63,7 @@
   "dependencies": {
     "@azure/dtdl-parser": "^1.0.0-beta.2",
     "@babel/preset-typescript": "^7.21.0",
+    "@digicatapult/dtdl-parser": "^1.0.36",
     "@stdlib/buffer-from-string": "^0.0.8",
     "axios": "^0.21.4",
     "Base64": "^1.1.0",
@@ -77,8 +78,8 @@
     "simple-git": "^3.19.0",
     "stream-chain": "^3.4.0",
     "stream-json": "^1.9.1",
+    "ts-morph": "^17.0.1",
     "util": "^0.12.5",
-    "xml2js": "^0.6.2",
-    "ts-morph": "^17.0.1"
+    "xml2js": "^0.6.2"
   }
 }
