--- a/.github/actions/analyse-data-clumps/action.yml
+++ b/.github/actions/analyse-data-clumps/action.yml
@@ -12,8 +12,8 @@ runs:
       shell: bash
       run: |
         cd "$RUNNER_TEMP/data-clumps-doctor/analyse"
-        npm ci
-        npm run build
+        yarn install --immutable
+        yarn build
     - name: Run data-clumps analysis
       shell: bash
       run: |
