--- a/analyse/package.json
+++ b/analyse/package.json
@@ -8,6 +8,7 @@
     "coverage": "jest --coverage",
     "test": "npm run build && npm run testOnly",
     "testOnly": "jest --coverage=false",
+    "generate-missing-test-reports": "npm run build && node ./build/tests/generateMissingReports.js",
     "start": "npm run build && node ./build/ignoreCoverage/development.js",
     "build": "rimraf ./build && tsc && cp -r ./src/ignoreCoverage/astGenerator ./build/ignoreCoverage && cp package.json ./build && cp ./../README.md ./build && cp ./../LICENSE.md ./build && npm run chmodCli",
     "chmodCli": "chmod +x ./build/ignoreCoverage/cli.js",
