Added more test szenarios

--- a/package.json
+++ b/package.json
@@ -6,21 +6,21 @@
   "types": "index.d.ts",
   "scripts": {
     "coverage": "jest --coverage",
-    "test": "npm run build && npm run testOnly",
+    "test": "yarn run build && yarn run testOnly",
     "testOnly": "jest --coverage=false",
-    "generate-missing-test-reports": "npm run build && node ./build/tests/generateMissingReports.js",
-    "start": "npm run build && node ./build/ignoreCoverage/development.js",
+    "generate-missing-test-reports": "yarn run build && node ./build/tests/generateMissingReports.js",
+    "start": "yarn run build && node ./build/ignoreCoverage/development.js",
     "build": "rimraf ./build && tsc && mkdir -p ./build/src/ignoreCoverage && cp -r ./src/ignoreCoverage/astGenerator ./build/src/ignoreCoverage/ && cp -r ./build/src/ignoreCoverage ./build/ignoreCoverage && cp ./build/src/index.js ./build/index.js && cp ./build/src/index.d.ts ./build/index.d.ts && cp package.json ./build && cp ./README.md ./build && cp ./LICENSE.md ./build && npm run chmodCli",
     "chmodCli": "chmod +x ./build/ignoreCoverage/cli.js",
     "dev": "nodemon",
-    "_prepareUpload": "npm run build && rimraf ./coverage && rimraf ./build/tests",
-    "_uploadBuild": "cd ./build && npm pack && npm publish && cd ..",
-    "_uploadWithoutPatch": "npm run _prepareUpload && npm run _uploadBuild && npm run clean",
-    "upload": "npm version patch && npm run _uploadWithoutPatch",
+    "_prepareUpload": "yarn run build && rimraf ./coverage && rimraf ./build/tests",
+    "_uploadBuild": "cd ./build && yarn pack && yarn publish && cd ..",
+    "_uploadWithoutPatch": "yarn run _prepareUpload && yarn run _uploadBuild && yarn run clean",
+    "upload": "yarn version patch && yarn run _uploadWithoutPatch",
     "clean": "rimraf ./build && gts clean",
     "format": "prettier . --write",
     "lint": "eslint . --ext .js,.ts,.tsx --fix",
-    "setup": "npm install && node setup.js && rimraf setup.js setup.json"
+    "setup": "yarn install && node setup.js && rimraf setup.js setup.json"
   },
   "bin": {
     "data-clumps": "./build/ignoreCoverage/cli.js"
@@ -66,8 +66,8 @@
     "@babel/preset-typescript": "^7.21.0",
     "@digicatapult/dtdl-parser": "^1.0.36",
     "@stdlib/buffer-from-string": "^0.0.8",
-    "axios": "^0.21.4",
     "Base64": "^1.1.0",
+    "axios": "^0.21.4",
     "base64-js": "^1.5.1",
     "buffer": "^6.0.0",
     "buffer-from": "^1.1.2",
@@ -75,6 +75,7 @@
     "data-clumps-type-context": "^0.1.102",
     "eslint": "^7.32.0",
     "levenshtein": "^1.0.5",
+    "minimist": "^1.2.8",
     "p-limit": "^3.1.0",
     "simple-git": "^3.19.0",
     "stream-chain": "^3.4.0",
