--- a/src/ignoreCoverage/astGenerator/pmd-java-dist/pom.xml
+++ b/src/ignoreCoverage/astGenerator/pmd-java-dist/pom.xml
@@ -20,63 +20,8 @@
 
   <build>
     <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-dependency-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>unpack</id>
-            <phase>package</phase>
-            <goals>
-              <goal>unpack</goal>
-            </goals>
-            <configuration>
-              <artifactItems>
-                <artifactItem>
-                  <groupId>net.sourceforge.pmd</groupId>
-                  <artifactId>pmd-dist</artifactId>
-                  <version>${pmd.version}</version>
-                  <type>jar</type>
-                  <overWrite>false</overWrite>
-                  <outputDirectory>${basedir}/target/extra-resources</outputDirectory>
-                  <includes>scripts/**,LICENSE</includes>
-                </artifactItem>
-              </artifactItems>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-       <artifactId>maven-assembly-plugin</artifactId>
-       <dependencies>
-         <dependency>
-           <groupId>net.sourceforge.pmd</groupId>
-           <artifactId>pmd-dist</artifactId>
-           <version>${pmd.version}</version>
-         </dependency>
-       </dependencies>
-       <configuration>
-         <appendAssemblyId>false</appendAssemblyId>
-         <attach>false</attach>
-         <archiverConfig>
-           <defaultDirectoryMode>493</defaultDirectoryMode> <!-- 0755 -->
-         </archiverConfig>
-         <finalName>${pmd.dist.bin.baseDirectory}</finalName>
-         <descriptorRefs>
-           <descriptorRef>pmd-bin</descriptorRef>
-         </descriptorRefs>
-       </configuration>
-       <executions>
-         <execution>
-           <id>build-bin-dist</id>
-           <phase>package</phase>
-           <goals>
-             <goal>single</goal>
-           </goals>
-         </execution>
-       </executions>
-     </plugin>
-   </plugins>
+      <!-- maven-assembly-plugin entfernt, da keine Distribution benötigt wird -->
+    </plugins>
   </build>
 
   <dependencies>
@@ -93,10 +38,7 @@
       <groupId>net.sourceforge.pmd</groupId>
       <artifactId>pmd-core</artifactId>
     </dependency>
-    <dependency>
-      <groupId>net.sourceforge.pmd</groupId>
-      <artifactId>pmd-ui</artifactId>
-    </dependency>
+    <!-- pmd-dist entfernt für Headless-Betrieb -->
   </dependencies>
 
 </project>
