--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "rimraf": "^3.0.2",
     "ts-jest": "^27.0.3",
     "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^4.3.5"
   },
   "dependencies": {
