--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,10 @@
     // "outFile": "./",                             /* Concatenate and emit output to single file. */
     "outDir": "build" /* Redirect output structure to the directory. */,
     "rootDir": "." /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */,
+    "baseUrl": "." /* Base directory to resolve non-absolute module names. */,
+    "paths": {
+      "@/*": ["tests/data-clumps/*"]
+    },
     // "composite": true,                           /* Enable project compilation */
     // "tsBuildInfoFile": "./",                     /* Specify file to store incremental compilation information */
     // "removeComments": true,                      /* Do not emit comments to output. */
